--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="css-reset.css">
+    <link rel="stylesheet" href="css/css-reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <title>ohmyfood</title>
 </head>
@@ -80,111 +80,120 @@
         </div>
         <div class="restaurants-box">
             <h2 class="restaurants-box-title">Restaurants</h2>
+                <!--<span class="custom-loading-spinner"></span>-->
                 <div class="restaurants-box-content">
                     <article class="tile">
-                        <picture class="restaurant-tile-img">
-                            <source
-                            srcset="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            media="(max-width: 375px)"
-                            />
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                        </picture>
-                        <p class="notification">Nouveau</p>
-                        <div class="restaurant-tile-content">
-                            <div class="restaurant-tile-text">
-                                <h2 class="tile-title">La palette du goût</h2>
-                                <p>Ménilmontant</p>
+                        <a href="#">
+                            <picture class="restaurant-tile-img">
+                                <source
+                                srcset="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                media="(max-width: 375px)"
+                                />
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            </picture>
+                            <p class="notification">Nouveau</p>
+                            <div class="restaurant-tile-content">
+                                <div class="restaurant-tile-text">
+                                    <h2 class="tile-title">La palette du goût</h2>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="restaurant-icon">
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
-                            <div class="restaurant-icon">
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="tile">
-                        <picture class="restaurant-tile-img">
-                            <source
-                            srcset="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            media="(max-width: 375px)"
-                            />
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel">
-                        </picture>
-                        <p class="notification">Nouveau</p>
-                        <div class="restaurant-tile-content">
-                            <div class="restaurant-tile-text">
-                                <h2 class="tile-title">La note enchantée</h2>
-                                <p>Charonne</p>
+                        <a href="#">
+                            <picture class="restaurant-tile-img">
+                                <source
+                                srcset="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                media="(max-width: 375px)"
+                                />
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel">
+                            </picture>
+                            <p class="notification">Nouveau</p>
+                            <div class="restaurant-tile-content">
+                                <div class="restaurant-tile-text">
+                                    <h2 class="tile-title">La note enchantée</h2>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="restaurant-icon">
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
-                            <div class="restaurant-icon">
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="tile">
-                        <picture class="restaurant-tile-img">
-                            <source
-                            srcset="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                            media="(max-width: 375px)"
-                            />
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil">
-                        </picture>
-                        <div class="restaurant-tile-content">
-                            <div class="restaurant-tile-text">
-                                <h2 class="tile-title">À la française</h2>
-                                <p>Citée rouge</p>
+                        <a href="#">
+                            <picture class="restaurant-tile-img">
+                                <source
+                                srcset="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                media="(max-width: 375px)"
+                                />
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Stil">
+                            </picture>
+                            <div class="restaurant-tile-content">
+                                <div class="restaurant-tile-text">
+                                    <h2 class="tile-title">À la française</h2>
+                                    <p>Citée rouge</p>
+                                </div>
+                                <div class="restaurant-icon">
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
-                            <div class="restaurant-icon">
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
                     <article class="tile">
-                        <picture class="restaurant-tile-img">
-                            <source
-                            srcset="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            media="(max-width: 375px)"
-                            />
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba">
-                        </picture>
-                        <div class="restaurant-tile-content">
-                            <div class="restaurant-tile-text">
-                                <h2 class="tile-title">Le délice des sens</h2>
-                                <p>Folie-Méricourt</p>
+                        <a href="#">
+                            <picture class="restaurant-tile-img">
+                                <source
+                                srcset="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                media="(max-width: 375px)"
+                                />
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba">
+                            </picture>
+                            <div class="restaurant-tile-content">
+                                <div class="restaurant-tile-text">
+                                    <h2 class="tile-title">Le délice des sens</h2>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="restaurant-icon">
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </div>
                             </div>
-                            <div class="restaurant-icon">
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
                 </div>
         </div>
         </main>
         <footer>
             <div class="footer-content">
-                <picture class="footer-logo">
-
-                </picture>
-                <div class="options">
+                <p class="footer-logo">ohmyfood</p>
+                <div class="options-1">
                     <div class="option">
-                        <div class="options-icon">
-                        <i class=""></i>
+                        <div id="option-icon-1">
+                            <i class="fas fa-utensils"></i>
                         </div>
-                        <p>Proposer un restaurant</p>
+                        <a href="#">Proposer un restaurant</a>
                     </div>
                     <div class="option">
-                        <div class="options-icon">
-                        <i class=""></i>
+                        <div id="option-icon-2">
+                            <i class="fas fa-hands-helping"></i>
                         </div>
-                        <p>Devenir partenaire</p>
+                        <a href="#">Devenir partenaire</a>
+                    </div>
+                </div>
+                <div class="options-2">
+                    <div class="option">
+                        <a href="#">Mentions légales</a>
                     </div>
                     <div class="option">
-                        <p>Mentions légales</p>
-                    </div>
-                    <div class="option">
-                        <p>Contact</p>
+                        <a href="#">Contact</a>
                     </div>
                 </div>
             </div>
