--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     
     <link rel="stylesheet" href="css/css-reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home/style.css">
+    <!--<link rel="stylesheet" href="css/home/animation.css">-->
     
     <title>ohmyfood</title>
 </head>
@@ -80,7 +81,7 @@
         </div>
         <div class="restaurants-box">
             <h2 class="restaurants-box-title">Restaurants</h2>
-                <!--<span class="custom-loading-spinner"></span>-->
+                <span class="custom-loading-spinner"></span>
                 <div class="restaurants-box-content">
                     <article class="tile">
                         <a href="#">
