home page fixed; menu 1 implemented

--- a/index.html
+++ b/index.html
@@ -43,42 +43,50 @@
             <div class="function-box">
                 <h2 class="function-box-title">Fonctionnement</h2>
                 <div class="function-box-content">
-                    <article class="tile function-tile">
-                        <div class="function-number">
-                            <p>1</p>
-                        </div>
-                        <div class="tile-content function-tile-content">
-                            <div class="function-icon">
-                                <i class="fas fa-mobile-alt"></i>
-                            </div>
-                            <p class="text">Choisissez un restaurant</p>
-                        </div>
-                    </article>
-                    <article class="tile function-tile">
-                        <div class="function-number">
-                            <p>2</p>
-                        </div>
-                        <div class="tile-content function-tile-content">
-                            <div class="function-icon">
-                                <i class="fas fa-ellipsis-v"></i>
-                                <i class="fas fa-bars"></i>
-                            </div>                            
-                            <p class="text">Composez votre menu</p>
-                        </div>
-                    </article>
-                    <article class="tile function-tile">
-                        <div class="function-number">
-                            <p>3</p>
-                        </div>
-                        <div class="tile-content function-tile-content">
-                            <div class="function-icon">
-                                <i class="fas fa-store"></i>
-                            </div>                            
-                            <p class="text">Dégustez au restaurant</p>
-                        </div>
-                    </article>
+                        <ul>
+                            <li class="function-tile-global">
+                                <span class="function-number"><p>1</p></span> 
+                                <div class="function-tile tile">
+                                    <a href="#">
+                                        <div class="function-tile-content">
+                                            <div class="function-icon">
+                                                <i class="fas fa-mobile-alt"></i> 
+                                            </div>
+                                            <p>Choisissez un restaurant</p>
+
+                                        </div>
+                                    </a>                          
+                                </div> 
+                            </li>
+                            <li class="function-tile-global">
+                                <span class="function-number"><p>2</p></span> 
+                                <div class="function-tile tile">
+                                    <a href="#">
+                                        <div class="function-tile-content">
+                                            <div class="function-icon">
+                                                <i class="fas fa-list-ul"></i> 
+                                            </div>
+                                            <p>Composez votre menu</p>
+                                        </div>
+                                    </a>                          
+                                </div> 
+                            </li>
+                            <li class="function-tile-global">
+                                <span class="function-number"><p>3</p></span> 
+                                <div class="function-tile tile">
+                                    <a href="#">
+                                        <div class="function-tile-content">
+                                            <div class="function-icon">
+                                                <i class="fas fa-store"></i> 
+                                            </div>
+                                            <p>Dégustez au restaurant</p>
+                                        </div>
+                                    </a>                          
+                                </div> 
+                            </li>
+                        </ul> 
+                    </div> 
                 </div>
-        </div>
         <div class="restaurants-box">
             <h2 class="restaurants-box-title">Restaurants</h2>
                 <span class="custom-loading-spinner"></span>
