Added notification to tile on home page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                                                 <i class="fas fa-mobile-alt"></i> 
                                             </div>
                                             <p>Choisissez un restaurant</p>
-
                                         </div>
                                     </a>                          
                                 </div> 
@@ -91,50 +90,54 @@
             <h2 class="restaurants-box-title">Restaurants</h2>
                 <span class="custom-loading-spinner"></span>
                 <div class="restaurants-box-content">
-                    <article class="tile">
-                        <a href="#">
-                            <picture class="restaurant-tile-img">
-                                <source
-                                srcset="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                                media="(max-width: 375px)"
-                                />
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                            </picture>
-                            <p class="notification">Nouveau</p>
-                            <div class="restaurant-tile-content">
-                                <div class="restaurant-tile-text">
-                                    <h2 class="tile-title">La palette du goût</h2>
-                                    <p>Ménilmontant</p>
+                    <div class="tile-notification-frame">
+                        <p class="notification">Nouveau</p>
+                        <article class="tile">
+                            <a href="#">
+                                <picture class="restaurant-tile-img">
+                                    <source
+                                    srcset="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    media="(max-width: 375px)"
+                                    />
+                                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                </picture>
+                                <div class="restaurant-tile-content">
+                                    <div class="restaurant-tile-text">
+                                        <h2 class="tile-title">La palette du goût</h2>
+                                        <p>Ménilmontant</p>
+                                    </div>
+                                    <div class="restaurant-icon">
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
+                                    </div>
                                 </div>
-                                <div class="restaurant-icon">
-                                    <i class="far fa-heart"></i>
-                                    <i class="fas fa-heart"></i>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="tile-notification-frame">
+                        <p class="notification">Nouveau</p>
+                        <article class="tile">
+                            <a href="#">
+                                <picture class="restaurant-tile-img">
+                                    <source
+                                    srcset="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                    media="(max-width: 375px)"
+                                    />
+                                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel">
+                                </picture>
+                                <div class="restaurant-tile-content">
+                                    <div class="restaurant-tile-text">
+                                        <h2 class="tile-title">La note enchantée</h2>
+                                        <p>Charonne</p>
+                                    </div>
+                                    <div class="restaurant-icon">
+                                        <i class="far fa-heart"></i>
+                                        <i class="fas fa-heart"></i>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="tile">
-                        <a href="#">
-                            <picture class="restaurant-tile-img">
-                                <source
-                                srcset="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                media="(max-width: 375px)"
-                                />
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Louis Hansel">
-                            </picture>
-                            <p class="notification">Nouveau</p>
-                            <div class="restaurant-tile-content">
-                                <div class="restaurant-tile-text">
-                                    <h2 class="tile-title">La note enchantée</h2>
-                                    <p>Charonne</p>
-                                </div>
-                                <div class="restaurant-icon">
-                                    <i class="far fa-heart"></i>
-                                    <i class="fas fa-heart"></i>
-                                </div>
-                            </div>
-                        </a>
-                    </article>
+                            </a>
+                        </article>
+                    </div>
                     <article class="tile">
                         <a href="#">
                             <picture class="restaurant-tile-img">
