Selection animation added to menu page

--- a/menus/menu2.html
+++ b/menus/menu2.html
@@ -31,14 +31,14 @@
             <main>
                     <picture class="restaurant-picture">
                         <source
-                        srcset="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                        srcset="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                         media="(max-width: 375px)"
                         />
-                    <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                    <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                     </picture>
                     <div class="menu">
                         <div class="menu-title">
-                            <h1 id="restaurant-title">A la française</h1>
+                            <h1 id="restaurant-title">La note enchantée</h1>
                             <div id="restaurant-icon">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
@@ -50,50 +50,49 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Tartare de poulpe acidulé</h2>
-                                            <p class="tile-ingredients">Aux zestes d'orange</p>
+                                            <h2 class="tile-meal">Ravioles de foie gras</h2>
+                                            <p class="tile-ingredients">Accompagnés de leur crème à la truffe</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">25€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">25€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Velouté de légumes d'antan</h2>
-                                            <p class="tile-ingredients">Carotte, panais, topinambour</p>
+                                            <h2 class="tile-meal">Caviar osciètre</h2>
+                                            <p class="tile-ingredients">Sur blini à la farine de blé noir</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">35€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">35€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Soupe à l'oignon</h2>
-                                            <p class="tile-ingredients">Revisitée</p>
+                                            <h2 class="tile-meal">Homard et espuma de potiron</h2>
+                                            <p class="tile-ingredients">Mariné aux zestes d'orange</p>
                                         </div>
-                                        <div class="slide-container">
-
                                         <p class="tile-price">20€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
+                                    </div>
+                                </article>
+                                <article class="tile">
+                                    <div class="tile-content">
+                                        <div class="tile-text">
+                                            <h2 class="tile-meal">Foie gras de canard cuit entier</h2>
+                                            <p class="tile-ingredients">Confiture de figue et pain toasté</p>
                                         </div>
+                                        <p class="tile-price">35€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                             </div>
@@ -104,49 +103,37 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Coquilles Saint-Jacques</h2>
-                                            <p class="tile-ingredients">Accompagnées d'une purée de panais</p>
+                                            <h2 class="tile-meal">Noix de coquilles Saint-Jacques</h2>
+                                            <p class="tile-ingredients">Sur lit de purée de céleri-rave</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">40€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">40€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Magret de canard</h2>
-                                            <p class="tile-ingredients">Et parmentier de pommes de terre</p>
+                                            <h2 class="tile-meal">Langoustine poêlée</h2>
+                                            <p class="tile-ingredients">Purée de patate douce</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">35€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">35€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Pigeonneau d’Ille-et-Vilaine</h2>
-                                            <p class="tile-ingredients">Sur son lit de gnocchis aux légumes</p>
+                                            <h2 class="tile-meal">Mijoté de queue de boeuf</h2>
+                                            <p class="tile-ingredients">Et riz sauvage aux zestes de citron</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">44€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">44€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                             </div>
@@ -157,49 +144,37 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Pétales de violettes glacés</h2>
-                                            <p class="tile-ingredients">Et purée de noisettes</p>
+                                            <h2 class="tile-meal">Macaron noisette et chocolat</h2>
+                                            <p class="tile-ingredients">Glace au caramel brun et sel de Guérande</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">18€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">18€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Fondant au chocolat</h2>
-                                            <p class="tile-ingredients">Revisité</p>
+                                            <h2 class="tile-meal">Baba au rhum revisité</h2>
+                                            <p class="tile-ingredients">Avec son coulis de citron</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">22€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">22€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Millefeuille croustillant</h2>
-                                            <p class="tile-ingredients">Myrtilles et pâte d’amande</p>
+                                            <h2 class="tile-meal">Tarte au citron meringuée </h2>
+                                            <p class="tile-ingredients">Déstructurée</p>
                                         </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">23€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <p class="tile-price">23€</p>
+                                    </div>
+                                    <div class="add-meal">
+                                        <button class="add-meal-button"></button>
                                     </div>
                                 </article>
                             </div>
