All animations done

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="css/css-reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home/style.css">
-    <!--<link rel="stylesheet" href="css/home/animation.css">-->
+    <link rel="stylesheet" href="css/home/animation.css">
     
     <title>ohmyfood</title>
 </head>
 <body>
+    <span class="custom-loading-spinner"></span>
+
     <div class="global-frame">
             <header>
                 <div class="top">
@@ -88,7 +90,6 @@
                 </div>
         <div class="restaurants-box">
             <h2 class="restaurants-box-title">Restaurants</h2>
-                <span class="custom-loading-spinner"></span>
                 <div class="restaurants-box-content">
                     <div class="tile-notification-frame">
                         <p class="notification">Nouveau</p>
